Apply index page update sent by Dieter

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 
 <P>Dieter 09/2016:<BR>
 Thanks to all those who had helped in the past making my projects possible.<BR>
-Out of personal reasons, I'm no longer is active since November 2015.<BR>
+Out of personal reasons, I'm no longer active since November 2015.<BR>
 Page abandoned. Anybody from the 6502 community who wants it can have it.<BR>
 It's now up to the next generation of hobbyists.<BR>
 When trying to build CPUs... <B>watch your back.</B>
@@ -82,12 +82,12 @@ When trying to build CPUs... <B>watch your back.</B>
 <P><center><h2>Homebuilt CPUs WebRing</h2></center>
 
 <P><center>
-<script src="http://members.iinet.net.au/~daveb/simplex/webring.js"
-        language="JavaScript" type="text/javascript"></script>
-<form action="http://members.iinet.net.au/~daveb/simplex/webring.js" name="ring" id="ring">
-<input type="button" value="Previous" onClick="previous()">
-<input type="button" value="Next"     onClick="next()">
-<input type="button" value="Random"   onClick="random()">
+<script src="http://www.homebrewcpuring.org/webring.js" language="JavaScript" type="text/javascript" ></script>
+<form action="http://www.homebrewcpuring.org/webring.js" name="ring" id="ring">
+<input type="button" value="Ring-Home" onclick="location='http://homebrewcpuring.org/'"> 
+<input type="button" value="Previous"  onClick="previous()">
+<input type="button" value="Next"      onClick="next()">
+<input type="button" value="Random"    onClick="random()">
 </form></center>
 
 <P><center>JavaScript by <A HREF="mailto:qirien@earthling.net">Qirien Dhaela</a><BR>
