Update homepage (sent by Dieter in a forum PM, Sep 2019)

--- a/index.htm
+++ b/index.htm
@@ -79,24 +79,31 @@ When trying to build CPUs... <B>watch your back.</B>
 
 <!-- ========================================== -->
 <!-- Include this code in each page on the Ring -->
-<P><center><h2>Homebuilt CPUs WebRing</h2></center>
-
-<P><center>
-<script src="http://www.homebrewcpuring.org/webring.js" language="JavaScript" type="text/javascript" ></script>
-<form action="http://www.homebrewcpuring.org/webring.js" name="ring" id="ring">
-<input type="button" value="Ring-Home" onclick="location='http://homebrewcpuring.org/'"> 
-<input type="button" value="Previous"  onClick="previous()">
-<input type="button" value="Next"      onClick="next()">
-<input type="button" value="Random"    onClick="random()">
-</form></center>
-
-<P><center>JavaScript by <A HREF="mailto:qirien@earthling.net">Qirien Dhaela</a><BR>
-<H3>Join the ring?</H3><BR>
-David Brooks, designer of the Simplex-III homebrew computer,<BR>
-has founded the Homebuilt CPUs Web Ring.<BR>
-To join, drop <A HREF="mailto:daveb@iinet.net.au">Dave</a> a line, mentioning your page's URL.<BR>
-It will then be added to the list.<BR>
-You'll need to copy this code fragment into your page.
+<p/>
+<center><h2><a href="https://www.homebrewcpuring.org/">Homebuilt CPUs WebRing</a></h2>
+<p/>
+<script src="https://www.homebrewcpuring.org/webring.js" language="JavaScript" type="text/javascript"></script>
+<form action="https://www.homebrewcpuring.org/webring.js" name="ring" id="ring">
+<input type="button" value="Ring-Home" onclick="ringhome()" />
+<input type="button" value="Previous"  onclick="previous()" />
+<input type="button" value="Next"      onclick="next()" />
+<input type="button" value="Random"    onclick="random()" />
+</form>
+</center>
+<p/>
+<center>JavaScript by <A HREF="mailto:qirien@earthling.net">Qirien Dhaela</a><BR>
+<p/>
+<h3>Join the ring?</h3>
+To join the Homebuilt CPUs ring, drop Warren <a href="mailto:cpuring@tuhs.org">a line</a>,
+mentioning your page's URL.                                                    <BR>
+He'll then add it to the list.                                                 <BR>
+You will need to copy this code fragment into your page (or reference it.)     <BR>
+<i>Note</i>: The ring is chartered for projects that include a home-built CPU. <BR>
+It can emulate a commercial part, that&prime;s OK.                             <BR>
+But actually using that commercial CPU doesn&prime;t rate.                     <BR>
+Likewise, the project must have been at least partially built:                 <BR>
+pure paper designs don&prime;t rate either.                                    <BR>
+It can be built using any technology you like, from relays to FPGAs.
 <!-- End of code fragment, in all ring pages.   -->
 <!-- ========================================== -->
 </center>
